package com.randioo.doudizhu_server.protocol;

import "Entity.proto";

message FightReadyRequest{
}

message FightReadyResponse{
	optional int32 errorCode = 1[default = 1];
}

message SCFightReady{
	optional int32 seated = 1;
}

message SCFightStart{
	repeated int32 pai = 1;
	optional int32 times = 2;	
	repeated PaiNum PaiNum = 4; 
	
}

message FightExitGameRequest{
	
}

message FightExitGameResponse{
	optional int32 errorCode = 1 [default = 1];
}


message SCFightExitGame{
	optional string gameRoleId = 1;
}

message SCFightApplyExitGame{
	optional string gameRoleId = 1;
	optional int32 countDown = 2;
}

message FightAgreeExitGameRequest{
	optional string gameRoleId = 1;
}

message FightAgreeExitGameResponse{
	
}

message SCFightGameDismiss{
	
}

message SCFightLoadResource{
	
}